# data-on-chain

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml  pytest.ini  ruff.toml
data_on_chain/: __init__.py  demo_blockchain.py  solana_uploader.py
data_on_chain/tests_data_on_chain/: test_demo_blockchain.py  test_lint.py  test_solana_uploader.py
data_on_chain/tests_data_on_chain/__snapshots__/: test_lint.ambr
